fixed toggle dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,7 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --foreground: #FF6B35;
     --background: #264653;
@@ -73,7 +73,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-} */
+}
 
 * {
   box-sizing: border-box;
